[Feature] Add REI support with the Whisper Imprinter as its own category
EMI has no build for the 26.x rewrite, so enable Roughly Enough Items (26.1.819) instead:
revive the integration/rei plugins against the REI 26.1 API, register a dedicated imprinter
category/workstation (icon = whisper_imprinter, one display per imprinter recipe: imprint cost
+ blank whisperer -> trained whisperer), and enable the rei_common/rei_client entrypoints.